--- a/css/theme6.css
+++ b/css/theme6.css
@@ -601,7 +601,7 @@ footer a:hover {
 
 /* Labels */
 .toggle-text {
-    font-size: 24px;
+    /* font-size: 24px; */
     font-family: var(--font-default);
     color: var(--magenta-glitch) !important;
     text-shadow: 0 0 4px var(--magenta-glitch);
